# AuroraGCAFS

./: .gitignore  CMakeLists.txt  H100_MIGRATION_SUMMARY.md  MANIFEST.in  README.md  URSA_H100_QUICK_REFERENCE.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
parm/: config.yaml
scripts/: ROCOTO_WORKFLOW_GUIDE.md  URSA_TRAINING_GUIDE.md  evaluate_model.py  rocoto_controller.sh  submit_incremental.sh  submit_training.sh  test_rocoto_workflow.sh  train_model.py  update_metrics.py  ursa_continuous_learning.sh  ursa_job_manager.sh  ursa_train_job.sh  workflow_auroragcafs.xml  workflow_auroragcafs_test.xml
sorc/auroragcafs/auroragcafs/: __init__.py
sorc/auroragcafs/auroragcafs/config/: __init__.py
sorc/auroragcafs/auroragcafs/data/: __init__.py
sorc/auroragcafs/auroragcafs/model/: __init__.py
sorc/auroragcafs/auroragcafs/utils/: __init__.py
sorc/auroragcafs/docs/: AURORAGCAFS_CODE_DOCUMENTATION.md
tests/: conftest.py  test_integration.py  test_performance.py  test_train_model.py
tests/scripts/: test_train_model.py
